<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="#F3E5F5">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ab11"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/our_vision"
                    android:padding="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:background="#D32F2F"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/we_build_skills_and_infrastructure_for_women_to_compete_in_the_global_tech_market"
                    android:textSize="16sp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@android:color/black"
                    android:background="#D32F2F"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/our_objectives"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:paddingStart="16dp"
                    android:textColor="@android:color/black"
                    android:background="#3F51B5"
                    android:textSize="22sp"
                    android:layout_marginTop="10dp"
                    tools:ignore="RtlSymmetry" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#3F51B5"
                    android:padding="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginRight="10dp"
                        android:background="#2196F3"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/equality"
                            android:paddingStart="16dp"
                            android:paddingTop="16dp"
                            android:textSize="20sp"
                            android:textColor="@android:color/black"
                            tools:ignore="RtlSymmetry" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/we_provide_technology_education_and_outreach_to_provide_women_equal_ease_of_access_to_resources_and_opportunities"
                            android:textSize="16sp"
                            android:paddingTop="10dp"
                            android:paddingStart="16dp"
                            android:paddingEnd="10sp"
                            android:paddingBottom="16dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="8dp"
                        android:background="#F57C00"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/empowerment"
                            android:paddingStart="16dp"
                            android:paddingTop="16dp"
                            android:textSize="20sp"
                            android:textColor="@android:color/black"
                            tools:ignore="RtlSymmetry" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/empowering_women_financially_and_socially_and_excel_them_in_tcechnology_careers"
                            android:textSize="16sp"
                            android:paddingTop="10dp"
                            android:paddingStart="16dp"
                            android:paddingEnd="10sp"
                            android:paddingBottom="16dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="8dp"
                        android:background="#388E3C"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/change"
                            android:paddingStart="16dp"
                            android:paddingTop="16dp"
                            android:textSize="20sp"
                            android:textColor="@android:color/black"
                            tools:ignore="RtlSymmetry" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/women_are_capable_of_adding_value_to_their_communities_far_beyond_simple_housework"
                            android:textSize="16sp"
                            android:paddingTop="10dp"
                            android:paddingStart="16dp"
                            android:paddingEnd="10sp"
                            android:paddingBottom="16dp"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ab12"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/todo" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@android:color/white"
                        android:text="@string/we_are_going_to_empower_girls_online_without_being_worried_of_physical_and_geographical_distances"
                        android:background="#E91E63"
                        android:padding="16dp"
                        />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#E1BEE7"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/home"
            android:id="@+id/aa1"
            android:background="?android:attr/selectableItemBackground"
            tools:ignore="NestedWeights"
            android:contentDescription="@string/todo" />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/search"
            android:id="@+id/aa2"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/todo" />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/donate"
            android:id="@+id/aa3"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/todo" />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/about"
            android:id="@+id/aa4"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/todo" />
    </LinearLayout>
</LinearLayout>


