<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="#F3E5F5">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/download"
                    android:background="@android:color/white"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="@android:color/black"
                    android:padding="16dp"
                    android:text="@string/about_us"
                    android:textAlignment="center"
                    android:background="#03A9F4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:background="#03A9F4"
                    android:text="@string/mujer_is_a_non_profit_platform_committed_to_teaching_female_students_how_to_code_we_aim_to_hitch_women_s_economic_and_social_advancement_on_to_tech_industry"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textAlignment="center"
                    android:background="#9C27B0"
                    android:text="@string/prototype"
                    android:textAllCaps="true"
                    android:padding="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:background="#9C27B0"
                    android:text="@string/version_1_0_1"
                    android:textAllCaps="true"
                    android:padding="15dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#E1BEE7"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/home"
            android:id="@+id/aa1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/todo"
            tools:ignore="NestedWeights" />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/search"
            android:id="@+id/aa2"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/todo" />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/donate"
            android:id="@+id/aa3"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/todo" />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/about"
            android:id="@+id/aa4"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/todo" />
    </LinearLayout>
</LinearLayout>