<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="#F3E5F5"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:background="#E64A19"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/format"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:padding="10dp"
                        />
                    <Spinner
                        android:id="@+id/spin1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#D84315"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:padding="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:background="#D32F2F"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/level"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:padding="10dp"
                        />
                    <Spinner
                        android:id="@+id/spin2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="#C62828"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="vertical"
                    android:background="#1976D2"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/topic"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:padding="10dp"
                        />
                    <Spinner
                        android:id="@+id/spin3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="#1565C0"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#388E3C"
                    android:layout_margin="10dp"
                    android:textAlignment="center"
                    android:text="@string/submit"
                    android:id="@+id/sumbit"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/aaaaq"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="#E1BEE7"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/aa1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/home"
            android:contentDescription="@string/todo"
            tools:ignore="NestedWeights" />
        <ImageView
            android:id="@+id/aa2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/search"
            android:contentDescription="@string/todo" />
        <ImageView
            android:id="@+id/aa3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/donate"
            android:contentDescription="@string/todo" />
        <ImageView
            android:id="@+id/aa4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/about"
            android:contentDescription="@string/todo" />
    </LinearLayout>
</LinearLayout>